Feat(eos_cli_config_gen): Interface IP NAT Support - origin_ip is not unique.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/defs_interface_ip_nat_static.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/defs_interface_ip_nat_static.schema.yml
@@ -8,7 +8,6 @@ type: dict
 $defs:
   interface_ip_nat_static:
     type: list
-    primary_key: original_ip
     items:
       type: dict
       keys:
@@ -35,6 +34,7 @@ $defs:
           description: IPv4 address.
         original_port:
           type: int
+          description: The combination of original_ip and original_port must be unique.
           convert_types:
             - str
           min: 1
