--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -49,6 +49,7 @@ all:
             core-1-isis-sr-ldp:
             core-2-ospf-ldp:
             core-3-isis-sr-ldp:
+            core-4-multicast:
         TRUNK_GROUP_TESTS:
           children:
             TRUNK_GROUP_TESTS_L3LEAF:
@@ -306,6 +307,7 @@ all:
             l3_edge_bgp:
             l3_edge_ospf:
             l3_edge_isis:
+            l3_edge_multicast:
         UPLINK_NATIVE_VLAN_TESTS:
           hosts:
             uplink-native-vlan-grandparent:
