--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -6549,6 +6549,7 @@ keys:
               keys:
                 vtep_ip:
                   type: str
+                  required: true
           interfaces:
             type: list
             items:
@@ -6571,6 +6572,7 @@ keys:
               keys:
                 name:
                   type: str
+                  required: true
                 carriers:
                   type: list
                   items:
@@ -6664,42 +6666,56 @@ keys:
               keys:
                 name:
                   type: str
+                  required: true
                 type:
                   type: str
+                  required: true
                 city:
                   type: str
+                  required: true
                 country:
                   type: str
+                  required: true
                 upload_bandwidth:
                   type: int
                 download_bandwidth:
                   type: int
                 firewall:
                   type: bool
+                  required: true
                 ips_control:
                   type: bool
+                  required: true
                 acceptable_use_policy:
                   type: bool
+                  required: true
                 vpn_credentials:
                   type: list
+                  required: true
                   items:
                     type: dict
                     keys:
                       fqdn:
                         type: str
+                        required: true
                       vpn_type:
                         type: str
+                        required: true
                       pre_shared_key:
                         type: str
+                        required: true
                 tunnels:
                   type: list
+                  required: true
                   items:
                     type: dict
                     keys:
                       name:
                         type: str
+                        required: true
                       preference:
                         type: str
+                        required: true
   mlag_configuration:
     type: dict
     display_name: Multi-Chassis Link Aggregation (MLAG) Configuration
