--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/metadata.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/metadata.schema.yml
@@ -72,6 +72,7 @@ keys:
               keys:
                 vtep_ip:
                   type: str
+                  required: true
           interfaces:
             type: list
             items:
@@ -94,6 +95,7 @@ keys:
               keys:
                 name:
                   type: str
+                  required: true
                 carriers:
                   type: list
                   items:
@@ -187,39 +189,53 @@ keys:
               keys:
                 name:
                   type: str
+                  required: true
                 type:
                   type: str
+                  required: true
                 city:
                   type: str
+                  required: true
                 country:
                   type: str
+                  required: true
                 upload_bandwidth:
                   type: int
                 download_bandwidth:
                   type: int
                 firewall:
                   type: bool
+                  required: true
                 ips_control:
                   type: bool
+                  required: true
                 acceptable_use_policy:
                   type: bool
+                  required: true
                 vpn_credentials:
                   type: list
+                  required: true
                   items:
                     type: dict
                     keys:
                       fqdn:
                         type: str
+                        required: true
                       vpn_type:
                         type: str
+                        required: true
                       pre_shared_key:
                         type: str
+                        required: true
                 tunnels:
                   type: list
+                  required: true
                   items:
                     type: dict
                     keys:
                       name:
                         type: str
+                        required: true
                       preference:
                         type: str
+                        required: true
