--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10884,12 +10884,12 @@ keys:
                   type: bool
                 rcf_in:
                   type: str
-                  description: 'Inbound rcf function name with parenthesis.
+                  description: 'Inbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: 'Outbound rcf function name with parenthesis.
+                  description: 'Outbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
           peer_groups:
@@ -10913,12 +10913,12 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: 'Inbound rcf function name with parenthesis.
+                  description: 'Inbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: 'Outbound rcf function name with parenthesis.
+                  description: 'Outbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
                 domain_remote:
@@ -11098,12 +11098,12 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: 'Inbound rcf function name with parenthesis.
+                  description: 'Inbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: 'Outbound rcf function name with parenthesis.
+                  description: 'Outbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
                 default_originate:
@@ -11158,12 +11158,12 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: 'Inbound rcf function name with parenthesis.
+                  description: 'Inbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: 'Outbound rcf function name with parenthesis.
+                  description: 'Outbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
                 prefix_list_in:
@@ -11320,12 +11320,12 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: 'Inbound rcf function name with parenthesis.
+                  description: 'Inbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: 'Outbound rcf function name with parenthesis.
+                  description: 'Outbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
                 prefix_list_in:
@@ -11354,12 +11354,12 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: 'Inbound rcf function name with parenthesis.
+                  description: 'Inbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: 'Outbound rcf function name with parenthesis.
+                  description: 'Outbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
                 prefix_list_in:
