--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -943,12 +943,12 @@ keys:
                 rcf_in:
                   type: str
                   description: |-
-                    Inbound rcf function name with parenthesis.
+                    Inbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
                 rcf_out:
                   type: str
                   description: |-
-                    Outbound rcf function name with parenthesis.
+                    Outbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
           peer_groups:
             type: list
@@ -972,12 +972,12 @@ keys:
                 rcf_in:
                   type: str
                   description: |-
-                    Inbound rcf function name with parenthesis.
+                    Inbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
                 rcf_out:
                   type: str
                   description: |-
-                    Outbound rcf function name with parenthesis.
+                    Outbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
                 domain_remote:
                   type: bool
@@ -1156,12 +1156,12 @@ keys:
                 rcf_in:
                   type: str
                   description: |-
-                    Inbound rcf function name with parenthesis.
+                    Inbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
                 rcf_out:
                   type: str
                   description: |-
-                    Outbound rcf function name with parenthesis.
+                    Outbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
                 default_originate:
                   type: dict
@@ -1216,12 +1216,12 @@ keys:
                 rcf_in:
                   type: str
                   description: |-
-                    Inbound rcf function name with parenthesis.
+                    Inbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
                 rcf_out:
                   type: str
                   description: |-
-                    Outbound rcf function name with parenthesis.
+                    Outbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
                 prefix_list_in:
                   type: str
@@ -1378,12 +1378,12 @@ keys:
                 rcf_in:
                   type: str
                   description: |-
-                    Inbound rcf function name with parenthesis.
+                    Inbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
                 rcf_out:
                   type: str
                   description: |-
-                    Outbound rcf function name with parenthesis.
+                    Outbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
                 prefix_list_in:
                   type: str
@@ -1412,12 +1412,12 @@ keys:
                 rcf_in:
                   type: str
                   description: |-
-                    Inbound rcf function name with parenthesis.
+                    Inbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
                 rcf_out:
                   type: str
                   description: |-
-                    Outbound rcf function name with parenthesis.
+                    Outbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
                 prefix_list_in:
                   type: str
