--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -11561,12 +11561,12 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: 'Inbound rcf function name with parenthesis.
+                  description: 'Inbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: 'Outbound rcf function name with parenthesis.
+                  description: 'Outbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
           route:
@@ -11596,12 +11596,12 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: 'Inbound rcf function name with parenthesis.
+                  description: 'Inbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: 'Outbound rcf function name with parenthesis.
+                  description: 'Outbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
           neighbor_default_encapsulation_mpls_next_hop_self:
@@ -11653,12 +11653,12 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: 'Inbound rcf function name with parenthesis.
+                  description: 'Inbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: 'Outbound rcf function name with parenthesis.
+                  description: 'Outbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
           route:
@@ -11688,12 +11688,12 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: 'Inbound rcf function name with parenthesis.
+                  description: 'Inbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: 'Outbound rcf function name with parenthesis.
+                  description: 'Outbound RCF function name with parenthesis.
 
                     Example: MyFunction(myarg).'
           neighbor_default_encapsulation_mpls_next_hop_self:
