--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -1764,12 +1764,12 @@ keys:
                 rcf_in:
                   type: str
                   description: |-
-                    Inbound rcf function name with parenthesis.
+                    Inbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
                 rcf_out:
                   type: str
                   description: |-
-                    Outbound rcf function name with parenthesis.
+                    Outbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
           route:
             type: dict
@@ -1799,12 +1799,12 @@ keys:
                 rcf_in:
                   type: str
                   description: |-
-                    Inbound rcf function name with parenthesis.
+                    Inbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
                 rcf_out:
                   type: str
                   description: |-
-                    Outbound rcf function name with parenthesis.
+                    Outbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
           neighbor_default_encapsulation_mpls_next_hop_self:
             type: dict
@@ -1854,12 +1854,12 @@ keys:
                 rcf_in:
                   type: str
                   description: |-
-                    Inbound rcf function name with parenthesis.
+                    Inbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
                 rcf_out:
                   type: str
                   description: |-
-                    Outbound rcf function name with parenthesis.
+                    Outbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
           route:
             type: dict
@@ -1889,12 +1889,12 @@ keys:
                 rcf_in:
                   type: str
                   description: |-
-                    Inbound rcf function name with parenthesis.
+                    Inbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
                 rcf_out:
                   type: str
                   description: |-
-                    Outbound rcf function name with parenthesis.
+                    Outbound RCF function name with parenthesis.
                     Example: MyFunction(myarg).
           neighbor_default_encapsulation_mpls_next_hop_self:
             type: dict
