--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan1-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan1-catalog.yml
@@ -180,6 +180,20 @@ anta.tests.ptp:
 anta.tests.routing.bgp:
 - VerifyBGPSpecificPeers:
     address_families:
+    - afi: evpn
+      peers:
+      - 10.255.255.10
+    result_overwrite:
+      custom_field: 'BGP EVPN Peer: dc1-leaf1a (IP: 10.255.255.10)'
+- VerifyBGPSpecificPeers:
+    address_families:
+    - afi: evpn
+      peers:
+      - 10.255.255.20
+    result_overwrite:
+      custom_field: 'BGP EVPN Peer: dc1-leaf1b (IP: 10.255.255.20)'
+- VerifyBGPSpecificPeers:
+    address_families:
     - afi: ipv4
       peers:
       - 10.255.255.0
@@ -204,6 +218,24 @@ anta.tests.security:
     profile: eAPI_SSL_Profile
     result_overwrite:
       custom_field: 'eAPI HTTPS SSL Profile: eAPI_SSL_Profile'
+- VerifySpecificIPSecConn:
+    ip_security_connections:
+    - peer: 10.255.255.10
+      vrf: default
+    result_overwrite:
+      custom_field: 'Peer: 10.255.255.10 VRF: default'
+- VerifySpecificIPSecConn:
+    ip_security_connections:
+    - peer: 10.255.255.20
+      vrf: default
+    result_overwrite:
+      custom_field: 'Peer: 10.255.255.20 VRF: default'
+- VerifySpecificIPSecConn:
+    ip_security_connections:
+    - peer: 10.255.1.2
+      vrf: default
+    result_overwrite:
+      custom_field: 'Peer: 10.255.1.2 VRF: default'
 - VerifySSHStatus: null
 - VerifySSHIPv4Acl:
     number: 3
