--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-evpn-vpn-import-pruning.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-evpn-vpn-import-pruning.cfg
@@ -76,6 +76,7 @@ router bgp 65101
       neighbor 10.255.251.1 peer group MLAG-IPv4-UNDERLAY-PEER
       neighbor 10.255.251.1 rib-in pre-policy retain
       redistribute connected
+      redistribute isis route-map Router_BGP_Isis
       redistribute static rcf Router_BGP_Static()
    !
    vrf TENANT_A_PROJECT02
