--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/evpn_vlan_aware_bundles.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/evpn_vlan_aware_bundles.schema.yml
@@ -11,7 +11,7 @@ keys:
       table: evpn-settings
     description: |-
       Enable VLAN aware bundles for every EVPN MAC-VRF.
-      If set to `true` all SVIs in a VRF are configured in a vlan-aware-bundle using the VRF name as the bundle name. Each `l2vlans` is configured as a separate vlan-aware-bundle with the VLAN name as the bundle name.
+      If set to `true` all SVIs in a VRF are configured in a vlan-aware-bundle using the VRF name as the bundle name. `l2vlans` are bundled in vlan-aware-bundles using the VLAN name as the bundle name.
 
       The `evpn_vlan_bundle` option under `svis` and `l2vlans` takes precedence and overrides this behavior. Per svi/l2vlan `evpn_vlan_bundle` also works when this setting is disabled which allow mixing vlan-aware-bundles with regular MAC-VRFs.
     type: bool
