--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_network_services.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_network_services.schema.yml
@@ -571,7 +571,7 @@ $defs:
                       type: str
                       description: |
                         Name of a bundle defined under 'evpn_vlan_bundles' to inherit configuration.
-                        To use this option the common "evpn_vlan_aware_bundles" option must be set to true.
+                        The common option "evpn_vlan_aware_bundles" is disregarded for this option.
                     nodes:
                       type: list
                       primary_key: node
@@ -1112,7 +1112,7 @@ $defs:
                 type: str
                 description: |
                   Name of a bundle defined under 'evpn_vlan_bundles' to inherit configuration.
-                  To use this option the common "evpn_vlan_aware_bundles" option must be set to true.
+                  The common option "evpn_vlan_aware_bundles" is disregarded for this option.
               trunk_groups:
                 type: list
                 items:
