Feat(eos_designs): Add optional cv-pathfinder site for pathfinders

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder.yml
@@ -533,6 +533,8 @@ metadata:
     role: pathfinder
     ssl_profile: profileA
     vtep_ip: 192.168.144.1
+    site: Global-pathfinder-site
+    address: Somewhere under the rainbow
     interfaces:
     - name: Ethernet1
       carrier: Bouygues_Telecom
