--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -6542,6 +6542,8 @@ keys:
             type: str
           ssl_profile:
             type: str
+          address:
+            type: str
           pathfinders:
             type: list
             items:
