--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/defs_interface_ip_nat_static.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/defs_interface_ip_nat_static.schema.yml
@@ -51,11 +51,11 @@ $defs:
         translated_ip:
           type: str
           required: true
-          description: IPv4 address. The combination of translated_ip and translated_ports must be unique.
+          description: IPv4 address.
         translated_port:
           type: int
           convert_types:
             - str
           min: 1
           max: 65535
-          description: "requires 'original_port'. The combination of translated_ip and translated_ports must be unique."
+          description: "requires 'original_port'."
