--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/loopback_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/loopback_interfaces.schema.yml
@@ -55,10 +55,10 @@ keys:
                   type: bool
         isis_enable:
           type: str
-          description: ISIS instance name
+          description: ISIS instance name.
         isis_bfd:
           type: bool
-          description: Enable BFD
+          description: Enable BFD.
         isis_passive:
           type: bool
         isis_metric:
