--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/vlan_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/vlan_interfaces.schema.yml
@@ -416,10 +416,10 @@ keys:
                       description: PIM hello interval in seconds.
         isis_enable:
           type: str
-          description: ISIS instance name
+          description: ISIS instance name.
         isis_bfd:
           type: bool
-          description: Enable BFD
+          description: Enable BFD.
         isis_passive:
           type: bool
         isis_metric:
