--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ethernet_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ethernet_interfaces.schema.yml
@@ -512,7 +512,7 @@ keys:
           description: ISIS instance.
         isis_bfd:
           type: bool
-          description: Enable BFD
+          description: Enable BFD.
         isis_passive:
           type: bool
         isis_metric:
