changes for VRF peer-group and schema

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL1B.cfg
@@ -317,7 +317,6 @@ router bgp 65105
    address-family ipv4
       no neighbor EVPN-OVERLAY-CORE activate
       no neighbor EVPN-OVERLAY-PEERS activate
-      neighbor Tenant_C_AFIPv4_PG_1 activate
       neighbor Tenant_C_AFIPv4_PG_2 prefix-list PL_In_Test_1 in
       neighbor Tenant_C_AFIPv4_PG_2 prefix-list PL_Out_Test_1 out
       neighbor Tenant_C_AFIPv4_PG_2 activate
@@ -325,10 +324,11 @@ router bgp 65105
       neighbor Tenant_C_AFIPv4_PG_3 route-map TEST_OUT out
       neighbor Tenant_C_AFIPv4_PG_3 activate
       neighbor UNDERLAY-PEERS activate
+      neighbor VRF_Tenant_C_AFIPv4_PG_1 activate
    !
    address-family ipv6
-      neighbor Tenant_C_AFPv6_PG_1 activate
       no neighbor Tenant_C_AFPv6_PG_2 activate
+      neighbor VRF_Tenant_C_AFIPv6_PG_1 activate
    !
    vrf Tenant_A_L3_VRF_Zone
       rd 192.168.254.15:15
@@ -411,10 +411,6 @@ router bgp 65105
       route-target export evpn 65105:31
       router-id 192.168.255.15
       redistribute connected
-      !
-      address-family ipv4
-      !
-      address-family ipv6
 !
 router ospf 14 vrf Tenant_A_WAN_Zone
    router-id 192.168.255.15
