--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL2A.cfg
@@ -265,6 +265,10 @@ router bgp 65106
       no neighbor EVPN-OVERLAY-PEERS activate
       no neighbor IPVPN-INTERWORKING-PEERS activate
       neighbor UNDERLAY-PEERS activate
+      neighbor VRF_Tenant_C_AFIPv4_PG_1 activate
+   !
+   address-family ipv6
+      neighbor VRF_Tenant_C_AFIPv6_PG_1 activate
    !
    address-family vpn-ipv4
       domain identifier 65000:4
@@ -316,8 +320,6 @@ router bgp 65106
       address-family ipv4
          neighbor 2.2.2.2 activate
          neighbor 2.2.2.3 activate
-      !
-      address-family ipv6
 !
 management api http-commands
    protocol https
