--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SVC3A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SVC3A.cfg
@@ -1019,7 +1019,6 @@ router bgp 65103
    address-family ipv4
       no neighbor EVPN-OVERLAY-PEERS activate
       neighbor MLAG-PEERS activate
-      neighbor Tenant_C_AFIPv4_PG_1 activate
       neighbor Tenant_C_AFIPv4_PG_2 prefix-list PL_In_Test_1 in
       neighbor Tenant_C_AFIPv4_PG_2 prefix-list PL_Out_Test_1 out
       neighbor Tenant_C_AFIPv4_PG_2 activate
@@ -1027,10 +1026,11 @@ router bgp 65103
       neighbor Tenant_C_AFIPv4_PG_3 route-map TEST_OUT out
       neighbor Tenant_C_AFIPv4_PG_3 activate
       neighbor UNDERLAY-PEERS activate
+      neighbor VRF_Tenant_C_AFIPv4_PG_1 activate
    !
    address-family ipv6
-      neighbor Tenant_C_AFPv6_PG_1 activate
       no neighbor Tenant_C_AFPv6_PG_2 activate
+      neighbor VRF_Tenant_C_AFIPv6_PG_1 activate
    !
    vrf Tenant_A_APP_Zone
       rd 65103:12
@@ -1114,10 +1114,6 @@ router bgp 65103
       update wait-install
       neighbor 10.255.251.7 peer group MLAG-PEERS
       redistribute connected
-      !
-      address-family ipv4
-      !
-      address-family ipv6
 !
 management api http-commands
    protocol https
