--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL1A.cfg
@@ -336,7 +336,6 @@ router bgp 65104
    address-family ipv4
       no neighbor EVPN-OVERLAY-CORE activate
       no neighbor EVPN-OVERLAY-PEERS activate
-      neighbor Tenant_C_AFIPv4_PG_1 activate
       neighbor Tenant_C_AFIPv4_PG_2 prefix-list PL_In_Test_1 in
       neighbor Tenant_C_AFIPv4_PG_2 prefix-list PL_Out_Test_1 out
       neighbor Tenant_C_AFIPv4_PG_2 activate
@@ -344,10 +343,11 @@ router bgp 65104
       neighbor Tenant_C_AFIPv4_PG_3 route-map TEST_OUT out
       neighbor Tenant_C_AFIPv4_PG_3 activate
       neighbor UNDERLAY-PEERS activate
+      neighbor VRF_Tenant_C_AFIPv4_PG_1 activate
    !
    address-family ipv6
-      neighbor Tenant_C_AFPv6_PG_1 activate
       no neighbor Tenant_C_AFPv6_PG_2 activate
+      neighbor VRF_Tenant_C_AFIPv6_PG_1 activate
    !
    vrf Tenant_A_L3_VRF_Zone
       rd 192.168.254.14:15
@@ -430,10 +430,6 @@ router bgp 65104
       route-target export evpn 65104:31
       router-id 192.168.255.14
       redistribute connected
-      !
-      address-family ipv4
-      !
-      address-family ipv6
 !
 router ospf 14 vrf Tenant_A_WAN_Zone
    router-id 192.168.255.14
