--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1_UNDEPLOYED_LEAF1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1_UNDEPLOYED_LEAF1A.cfg
@@ -634,7 +634,6 @@ router bgp 65110
    address-family ipv4
       no neighbor EVPN-OVERLAY-PEERS activate
       neighbor MLAG-PEERS activate
-      neighbor Tenant_C_AFIPv4_PG_1 activate
       neighbor Tenant_C_AFIPv4_PG_2 prefix-list PL_In_Test_1 in
       neighbor Tenant_C_AFIPv4_PG_2 prefix-list PL_Out_Test_1 out
       neighbor Tenant_C_AFIPv4_PG_2 activate
@@ -642,10 +641,11 @@ router bgp 65110
       neighbor Tenant_C_AFIPv4_PG_3 route-map TEST_OUT out
       neighbor Tenant_C_AFIPv4_PG_3 activate
       neighbor UNDERLAY-PEERS activate
+      neighbor VRF_Tenant_C_AFIPv4_PG_1 activate
    !
    address-family ipv6
-      neighbor Tenant_C_AFPv6_PG_1 activate
       no neighbor Tenant_C_AFPv6_PG_2 activate
+      neighbor VRF_Tenant_C_AFIPv6_PG_1 activate
    !
    vrf Tenant_A_APP_Zone
       rd 192.168.255.21:12
@@ -729,10 +729,6 @@ router bgp 65110
       update wait-install
       neighbor 10.255.251.25 peer group MLAG-PEERS
       redistribute connected
-      !
-      address-family ipv4
-      !
-      address-family ipv6
 !
 management api http-commands
    protocol https
