inband ztp works with inband_mgmt_ip key

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-dualstack2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-dualstack2.cfg
@@ -59,6 +59,8 @@ interface Port-Channel25
    switchport
    switchport trunk allowed vlan 105
    switchport mode trunk
+   port-channel lacp fallback timeout 30
+   port-channel lacp fallback individual
    mlag 25
 !
 interface Ethernet11
@@ -121,6 +123,8 @@ interface Ethernet24
 interface Ethernet25
    description INBAND-MGMT-DUALSTACK-IPS_Ethernet2
    no shutdown
+   switchport access vlan 105
+   switchport mode access
    channel-group 25 mode active
 !
 interface Loopback0
