--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -326,6 +326,9 @@ all:
             inband-mgmt-parent-ipv6-2:
             inband-mgmt-ipv6-only:
             inband-mgmt-ipv6-only-vrf:
+            inband-mgmt-ip-plus-inband-ztp:
+            inband-mgmt-mlag-a:
+            inband-mgmt-mlag-b:
         WAN_TESTS:
           children:
             AUTOVPN_TESTS:
