fixing ci and removing address_family_ipv6 from schema

--- a/ansible_collections/arista/avd/molecule/eos_designs_deprecated_vars/intended/structured_configs/host2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_deprecated_vars/intended/structured_configs/host2.yml
@@ -38,6 +38,7 @@ router_bgp:
     peer_groups:
     - name: MPLS-OVERLAY-PEERS
       activate: true
+  address_family_ipv6: {}
 service_routing_protocols_model: multi-agent
 ip_routing: true
 vlan_internal_order:
