FEAT(eos_cli_config_gen): Add support for isis spf-interval hold timer

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis-new.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis-new.yml
@@ -9,6 +9,7 @@ router_isis:
   spf_interval:
     interval: 250
     wait_interval: 10
+    hold_interval: 20
   graceful_restart:
     enabled: true
     restart_hold_time: 10
